...
            <rect key="frame" x="0.0" y="0.0" width="254" height="216"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aRZ-Wl-xIh">
                    <rect key="frame" x="0.0" y="0.0" width="254" height="216"/>
                    <subviews>
                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="play.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="5df-wJ-vx4">
                            <rect key="frame" x="112" y="94.5" width="30" height="26.5"/>
                            <color key="tintColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <constraints>
                                <constraint firstAttribute="width" constant="30" id="KI6-HL-aCv"/>
                                <constraint firstAttribute="height" constant="30" id="Ms1-eM-bJF"/>
                            </constraints>
...
