...
    func collectionView(_ collectionView: UICollectionView, viewForSupplementaryElementOfKind kind: String, at indexPath: IndexPath) -> UICollectionReusableView {
        
        if let cell = collectionView.dequeueReusableSupplementaryView(ofKind: kind, withReuseIdentifier: TitleCollectionReusableView.identifier, for: indexPath) as? TitleCollectionReusableView {
            
            switch indexPath.section {
            case HomeSection.BestPopular.rawValue:
                cell.lbTitleName.text = "BEST POPULAR FILMS AND SERIALS"
                cell.lbSeeMore.isHidden = true
                
            case HomeSection.Showcase.rawValue:
                cell.mainView.backgroundColor = UIColor(named: "fill-color")
                cell.lbTitleName.text = "SHOWCASES"
                cell.lbSeeMore.text = "MORE SHOWCASES"
...
