...
                                <constraint firstAttribute="height" constant="380" id="cwU-DM-Bhn"/>
                            </constraints>
                        </imageView>
                        <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lessthan.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="vHf-Ed-dMH">
                            <rect key="frame" x="20" y="30.5" width="30" height="29"/>
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <accessibility key="accessibilityConfiguration" identifier="closeDetailBtn"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="30" id="PfB-Gy-tHi"/>
                                <constraint firstAttribute="width" constant="30" id="aC4-MO-v4O"/>
                            </constraints>
                        </imageView>
                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="magnifyingglass" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="oF4-KI-Xi7">
...
